src/y.output
State 40 conflicts: 1 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: ProgramElementList

    2 ProgramElementList: ProgramElement ProgramElementList
    3                   | /* empty */

    4 ProgramElement: VarDeclStmt
    5               | StructDef
    6               | FnDeclStmt
    7               | FnDef
    8               | SEMICOLON

    9 NUM: UNUM
   10    | SUB UNUM

   11 ArithExpr: ArithExpr ADD ArithExpr
   12          | ArithExpr SUB ArithExpr
   13          | ArithExpr MUL ArithExpr
   14          | ArithExpr DIV ArithExpr
   15          | ExprUnit

   16 ExprUnit: NUM
   17         | ID
   18         | LPAR ArithExpr RPAR
   19         | FnCall
   20         | LeftVal LBRA ID RBRA
   21         | LeftVal LBRA NUM RBRA
   22         | LeftVal DOT ID

   23 BoolExpr: BoolExpr AND BoolExpr
   24         | BoolExpr OR BoolExpr
   25         | BoolUnit

   26 BoolUnit: LPAR ExprUnit GT ExprUnit RPAR
   27         | LPAR ExprUnit GE ExprUnit RPAR
   28         | LPAR ExprUnit LT ExprUnit RPAR
   29         | LPAR ExprUnit LE ExprUnit RPAR
   30         | LPAR ExprUnit EQUAL ExprUnit RPAR
   31         | LPAR ExprUnit NE ExprUnit RPAR
   32         | LPAR BoolExpr RPAR
   33         | NOT BoolUnit

   34 BoolUnit_: LPAR ExprUnit GT ExprUnit RPAR
   35          | LPAR ExprUnit LT ExprUnit RPAR
   36          | LPAR ExprUnit GE ExprUnit RPAR
   37          | LPAR ExprUnit LE ExprUnit RPAR
   38          | LPAR ExprUnit EQUAL ExprUnit RPAR
   39          | LPAR ExprUnit NE ExprUnit RPAR
   40          | LPAR BoolExpr RPAR
   41          | LPAR NOT BoolUnit RPAR

   42 LeftVal: ID
   43        | LeftVal LBRA ID RBRA
   44        | LeftVal LBRA NUM RBRA
   45        | LeftVal DOT ID

   46 RightVal: ArithExpr

   47 RightValList: RightVal COMMA RightValList
   48             | RightVal

   49 FnCall: ID LPAR RightValList RPAR
   50       | ID LPAR RPAR

   51 VarDeclStmt: LET VarDecl SEMICOLON
   52            | LET VarDef SEMICOLON

   53 VarDecl: ID COLON Type
   54        | ID LBRA NUM RBRA COLON Type
   55        | ID
   56        | ID LBRA NUM RBRA

   57 VarDef: ID COLON Type ASSIGN RightVal
   58       | ID ASSIGN RightVal
   59       | ID LBRA NUM RBRA COLON Type ASSIGN LCUR RightValList RCUR
   60       | ID LBRA NUM RBRA ASSIGN LCUR RightValList RCUR

   61 Type: INT
   62     | ID

   63 VarDeclList: VarDecl COMMA VarDeclList
   64            | VarDecl

   65 ParamDecl: VarDeclList
   66          | /* empty */

   67 StructDef: STRUCT ID LCUR VarDeclList RCUR

   68 FnDeclStmt: FnDecl SEMICOLON

   69 FnDecl: FN ID LPAR ParamDecl RPAR
   70       | FN ID LPAR ParamDecl RPAR ARR Type

   71 FnDef: FnDecl LCUR CodeBlockStmtList RCUR

   72 CodeBlockStmtList: CodeBlockStmt CodeBlockStmtList
   73                  | CodeBlockStmt
   74                  | /* empty */

   75 CodeBlockStmt: VarDeclStmt
   76              | AssignStmt
   77              | FnCall SEMICOLON
   78              | IfStmt
   79              | WhileStmt
   80              | RETURN RightVal SEMICOLON
   81              | RETURN SEMICOLON
   82              | CONTINUE SEMICOLON
   83              | BREAK SEMICOLON
   84              | SEMICOLON

   85 WhileStmt: WHILE BoolUnit_ LCUR CodeBlockStmtList RCUR

   86 IfStmt: IF BoolUnit_ LCUR CodeBlockStmtList RCUR
   87       | IF BoolUnit_ LCUR CodeBlockStmtList RCUR ELSE LCUR CodeBlockStmtList RCUR

   88 AssignStmt: LeftVal ASSIGN RightVal SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
ADD (258) 11
SUB (259) 10 12
MUL (260) 13
DIV (261) 14
SEMICOLON (262) 8 51 52 68 77 80 81 82 83 84 88
COLON (263) 53 54 57 59
COMMA (264) 47 63
ID (265) 17 20 22 42 43 45 49 50 53 54 55 56 57 58 59 60 62 67 69 70
UNUM (266) 9 10
LPAR (267) 18 26 27 28 29 30 31 32 34 35 36 37 38 39 40 41 49 50 69
    70
RPAR (268) 18 26 27 28 29 30 31 32 34 35 36 37 38 39 40 41 49 50 69
    70
LBRA (269) 20 21 43 44 54 56 59 60
RBRA (270) 20 21 43 44 54 56 59 60
DOT (271) 22 45
AND (272) 23
OR (273) 24
GE (274) 27 36
LE (275) 29 37
EQUAL (276) 30 38
NE (277) 31 39
GT (278) 26 34
LT (279) 28 35
NOT (280) 33 41
ASSIGN (281) 57 58 59 60 88
LET (282) 51 52
IF (283) 86 87
ELSE (284) 87
WHILE (285) 85
BREAK (286) 83
CONTINUE (287) 82
RETURN (288) 80 81
FN (289) 69 70
STRUCT (290) 67
INT (291) 61
ARR (292) 70
LCUR (293) 59 60 67 71 85 86 87
RCUR (294) 59 60 67 71 85 86 87


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
Program (41)
    on left: 1, on right: 0
ProgramElementList (42)
    on left: 2 3, on right: 1 2
ProgramElement (43)
    on left: 4 5 6 7 8, on right: 2
NUM (44)
    on left: 9 10, on right: 16 21 44 54 56 59 60
ArithExpr (45)
    on left: 11 12 13 14 15, on right: 11 12 13 14 18 46
ExprUnit (46)
    on left: 16 17 18 19 20 21 22, on right: 15 26 27 28 29 30 31 34
    35 36 37 38 39
BoolExpr (47)
    on left: 23 24 25, on right: 23 24 32 40
BoolUnit (48)
    on left: 26 27 28 29 30 31 32 33, on right: 25 33 41
BoolUnit_ (49)
    on left: 34 35 36 37 38 39 40 41, on right: 85 86 87
LeftVal (50)
    on left: 42 43 44 45, on right: 20 21 22 43 44 45 88
RightVal (51)
    on left: 46, on right: 47 48 57 58 80 88
RightValList (52)
    on left: 47 48, on right: 47 49 59 60
FnCall (53)
    on left: 49 50, on right: 19 77
VarDeclStmt (54)
    on left: 51 52, on right: 4 75
VarDecl (55)
    on left: 53 54 55 56, on right: 51 63 64
VarDef (56)
    on left: 57 58 59 60, on right: 52
Type (57)
    on left: 61 62, on right: 53 54 57 59 70
VarDeclList (58)
    on left: 63 64, on right: 63 65 67
ParamDecl (59)
    on left: 65 66, on right: 69 70
StructDef (60)
    on left: 67, on right: 5
FnDeclStmt (61)
    on left: 68, on right: 6
FnDecl (62)
    on left: 69 70, on right: 68 71
FnDef (63)
    on left: 71, on right: 7
CodeBlockStmtList (64)
    on left: 72 73 74, on right: 71 72 85 86 87
CodeBlockStmt (65)
    on left: 75 76 77 78 79 80 81 82 83 84, on right: 72 73
WhileStmt (66)
    on left: 85, on right: 79
IfStmt (67)
    on left: 86 87, on right: 78
AssignStmt (68)
    on left: 88, on right: 76


state 0

    0 $accept: . Program $end

    SEMICOLON  shift, and go to state 1
    LET        shift, and go to state 2
    FN         shift, and go to state 3
    STRUCT     shift, and go to state 4

    $default  reduce using rule 3 (ProgramElementList)

    Program             go to state 5
    ProgramElementList  go to state 6
    ProgramElement      go to state 7
    VarDeclStmt         go to state 8
    StructDef           go to state 9
    FnDeclStmt          go to state 10
    FnDecl              go to state 11
    FnDef               go to state 12


state 1

    8 ProgramElement: SEMICOLON .

    $default  reduce using rule 8 (ProgramElement)


state 2

   51 VarDeclStmt: LET . VarDecl SEMICOLON
   52            | LET . VarDef SEMICOLON

    ID  shift, and go to state 13

    VarDecl  go to state 14
    VarDef   go to state 15


state 3

   69 FnDecl: FN . ID LPAR ParamDecl RPAR
   70       | FN . ID LPAR ParamDecl RPAR ARR Type

    ID  shift, and go to state 16


state 4

   67 StructDef: STRUCT . ID LCUR VarDeclList RCUR

    ID  shift, and go to state 17


state 5

    0 $accept: Program . $end

    $end  shift, and go to state 18


state 6

    1 Program: ProgramElementList .

    $default  reduce using rule 1 (Program)


state 7

    2 ProgramElementList: ProgramElement . ProgramElementList

    SEMICOLON  shift, and go to state 1
    LET        shift, and go to state 2
    FN         shift, and go to state 3
    STRUCT     shift, and go to state 4

    $default  reduce using rule 3 (ProgramElementList)

    ProgramElementList  go to state 19
    ProgramElement      go to state 7
    VarDeclStmt         go to state 8
    StructDef           go to state 9
    FnDeclStmt          go to state 10
    FnDecl              go to state 11
    FnDef               go to state 12


state 8

    4 ProgramElement: VarDeclStmt .

    $default  reduce using rule 4 (ProgramElement)


state 9

    5 ProgramElement: StructDef .

    $default  reduce using rule 5 (ProgramElement)


state 10

    6 ProgramElement: FnDeclStmt .

    $default  reduce using rule 6 (ProgramElement)


state 11

   68 FnDeclStmt: FnDecl . SEMICOLON
   71 FnDef: FnDecl . LCUR CodeBlockStmtList RCUR

    SEMICOLON  shift, and go to state 20
    LCUR       shift, and go to state 21


state 12

    7 ProgramElement: FnDef .

    $default  reduce using rule 7 (ProgramElement)


state 13

   53 VarDecl: ID . COLON Type
   54        | ID . LBRA NUM RBRA COLON Type
   55        | ID .
   56        | ID . LBRA NUM RBRA
   57 VarDef: ID . COLON Type ASSIGN RightVal
   58       | ID . ASSIGN RightVal
   59       | ID . LBRA NUM RBRA COLON Type ASSIGN LCUR RightValList RCUR
   60       | ID . LBRA NUM RBRA ASSIGN LCUR RightValList RCUR

    COLON   shift, and go to state 22
    LBRA    shift, and go to state 23
    ASSIGN  shift, and go to state 24

    $default  reduce using rule 55 (VarDecl)


state 14

   51 VarDeclStmt: LET VarDecl . SEMICOLON

    SEMICOLON  shift, and go to state 25


state 15

   52 VarDeclStmt: LET VarDef . SEMICOLON

    SEMICOLON  shift, and go to state 26


state 16

   69 FnDecl: FN ID . LPAR ParamDecl RPAR
   70       | FN ID . LPAR ParamDecl RPAR ARR Type

    LPAR  shift, and go to state 27


state 17

   67 StructDef: STRUCT ID . LCUR VarDeclList RCUR

    LCUR  shift, and go to state 28


state 18

    0 $accept: Program $end .

    $default  accept


state 19

    2 ProgramElementList: ProgramElement ProgramElementList .

    $default  reduce using rule 2 (ProgramElementList)


state 20

   68 FnDeclStmt: FnDecl SEMICOLON .

    $default  reduce using rule 68 (FnDeclStmt)


state 21

   71 FnDef: FnDecl LCUR . CodeBlockStmtList RCUR

    SEMICOLON  shift, and go to state 29
    ID         shift, and go to state 30
    LET        shift, and go to state 2
    IF         shift, and go to state 31
    WHILE      shift, and go to state 32
    BREAK      shift, and go to state 33
    CONTINUE   shift, and go to state 34
    RETURN     shift, and go to state 35

    $default  reduce using rule 74 (CodeBlockStmtList)

    LeftVal            go to state 36
    FnCall             go to state 37
    VarDeclStmt        go to state 38
    CodeBlockStmtList  go to state 39
    CodeBlockStmt      go to state 40
    WhileStmt          go to state 41
    IfStmt             go to state 42
    AssignStmt         go to state 43


state 22

   53 VarDecl: ID COLON . Type
   57 VarDef: ID COLON . Type ASSIGN RightVal

    ID   shift, and go to state 44
    INT  shift, and go to state 45

    Type  go to state 46


state 23

   54 VarDecl: ID LBRA . NUM RBRA COLON Type
   56        | ID LBRA . NUM RBRA
   59 VarDef: ID LBRA . NUM RBRA COLON Type ASSIGN LCUR RightValList RCUR
   60       | ID LBRA . NUM RBRA ASSIGN LCUR RightValList RCUR

    SUB   shift, and go to state 47
    UNUM  shift, and go to state 48

    NUM  go to state 49


state 24

   58 VarDef: ID ASSIGN . RightVal

    SUB   shift, and go to state 47
    ID    shift, and go to state 50
    UNUM  shift, and go to state 48
    LPAR  shift, and go to state 51

    NUM        go to state 52
    ArithExpr  go to state 53
    ExprUnit   go to state 54
    LeftVal    go to state 55
    RightVal   go to state 56
    FnCall     go to state 57


state 25

   51 VarDeclStmt: LET VarDecl SEMICOLON .

    $default  reduce using rule 51 (VarDeclStmt)


state 26

   52 VarDeclStmt: LET VarDef SEMICOLON .

    $default  reduce using rule 52 (VarDeclStmt)


state 27

   69 FnDecl: FN ID LPAR . ParamDecl RPAR
   70       | FN ID LPAR . ParamDecl RPAR ARR Type

    ID  shift, and go to state 58

    $default  reduce using rule 66 (ParamDecl)

    VarDecl      go to state 59
    VarDeclList  go to state 60
    ParamDecl    go to state 61


state 28

   67 StructDef: STRUCT ID LCUR . VarDeclList RCUR

    ID  shift, and go to state 58

    VarDecl      go to state 59
    VarDeclList  go to state 62


state 29

   84 CodeBlockStmt: SEMICOLON .

    $default  reduce using rule 84 (CodeBlockStmt)


state 30

   42 LeftVal: ID .
   49 FnCall: ID . LPAR RightValList RPAR
   50       | ID . LPAR RPAR

    LPAR  shift, and go to state 63

    $default  reduce using rule 42 (LeftVal)


state 31

   86 IfStmt: IF . BoolUnit_ LCUR CodeBlockStmtList RCUR
   87       | IF . BoolUnit_ LCUR CodeBlockStmtList RCUR ELSE LCUR CodeBlockStmtList RCUR

    LPAR  shift, and go to state 64

    BoolUnit_  go to state 65


state 32

   85 WhileStmt: WHILE . BoolUnit_ LCUR CodeBlockStmtList RCUR

    LPAR  shift, and go to state 64

    BoolUnit_  go to state 66


state 33

   83 CodeBlockStmt: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 67


state 34

   82 CodeBlockStmt: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 68


state 35

   80 CodeBlockStmt: RETURN . RightVal SEMICOLON
   81              | RETURN . SEMICOLON

    SUB        shift, and go to state 47
    SEMICOLON  shift, and go to state 69
    ID         shift, and go to state 50
    UNUM       shift, and go to state 48
    LPAR       shift, and go to state 51

    NUM        go to state 52
    ArithExpr  go to state 53
    ExprUnit   go to state 54
    LeftVal    go to state 55
    RightVal   go to state 70
    FnCall     go to state 57


state 36

   43 LeftVal: LeftVal . LBRA ID RBRA
   44        | LeftVal . LBRA NUM RBRA
   45        | LeftVal . DOT ID
   88 AssignStmt: LeftVal . ASSIGN RightVal SEMICOLON

    LBRA    shift, and go to state 71
    DOT     shift, and go to state 72
    ASSIGN  shift, and go to state 73


state 37

   77 CodeBlockStmt: FnCall . SEMICOLON

    SEMICOLON  shift, and go to state 74


state 38

   75 CodeBlockStmt: VarDeclStmt .

    $default  reduce using rule 75 (CodeBlockStmt)


state 39

   71 FnDef: FnDecl LCUR CodeBlockStmtList . RCUR

    RCUR  shift, and go to state 75


state 40

   72 CodeBlockStmtList: CodeBlockStmt . CodeBlockStmtList
   73                  | CodeBlockStmt .

    SEMICOLON  shift, and go to state 29
    ID         shift, and go to state 30
    LET        shift, and go to state 2
    IF         shift, and go to state 31
    WHILE      shift, and go to state 32
    BREAK      shift, and go to state 33
    CONTINUE   shift, and go to state 34
    RETURN     shift, and go to state 35

    RCUR      reduce using rule 73 (CodeBlockStmtList)
    RCUR      [reduce using rule 74 (CodeBlockStmtList)]
    $default  reduce using rule 73 (CodeBlockStmtList)

    LeftVal            go to state 36
    FnCall             go to state 37
    VarDeclStmt        go to state 38
    CodeBlockStmtList  go to state 76
    CodeBlockStmt      go to state 40
    WhileStmt          go to state 41
    IfStmt             go to state 42
    AssignStmt         go to state 43


state 41

   79 CodeBlockStmt: WhileStmt .

    $default  reduce using rule 79 (CodeBlockStmt)


state 42

   78 CodeBlockStmt: IfStmt .

    $default  reduce using rule 78 (CodeBlockStmt)


state 43

   76 CodeBlockStmt: AssignStmt .

    $default  reduce using rule 76 (CodeBlockStmt)


state 44

   62 Type: ID .

    $default  reduce using rule 62 (Type)


state 45

   61 Type: INT .

    $default  reduce using rule 61 (Type)


state 46

   53 VarDecl: ID COLON Type .
   57 VarDef: ID COLON Type . ASSIGN RightVal

    ASSIGN  shift, and go to state 77

    $default  reduce using rule 53 (VarDecl)


state 47

   10 NUM: SUB . UNUM

    UNUM  shift, and go to state 78


state 48

    9 NUM: UNUM .

    $default  reduce using rule 9 (NUM)


state 49

   54 VarDecl: ID LBRA NUM . RBRA COLON Type
   56        | ID LBRA NUM . RBRA
   59 VarDef: ID LBRA NUM . RBRA COLON Type ASSIGN LCUR RightValList RCUR
   60       | ID LBRA NUM . RBRA ASSIGN LCUR RightValList RCUR

    RBRA  shift, and go to state 79


state 50

   17 ExprUnit: ID .
   42 LeftVal: ID .
   49 FnCall: ID . LPAR RightValList RPAR
   50       | ID . LPAR RPAR

    LPAR  shift, and go to state 63

    LBRA      reduce using rule 42 (LeftVal)
    DOT       reduce using rule 42 (LeftVal)
    $default  reduce using rule 17 (ExprUnit)


state 51

   18 ExprUnit: LPAR . ArithExpr RPAR

    SUB   shift, and go to state 47
    ID    shift, and go to state 50
    UNUM  shift, and go to state 48
    LPAR  shift, and go to state 51

    NUM        go to state 52
    ArithExpr  go to state 80
    ExprUnit   go to state 54
    LeftVal    go to state 55
    FnCall     go to state 57


state 52

   16 ExprUnit: NUM .

    $default  reduce using rule 16 (ExprUnit)


state 53
